--- a/.github/workflows/fetch-papers.yml
+++ b/.github/workflows/fetch-papers.yml
@@ -1,6 +1,8 @@
 name: Fetch Academic Papers
 
 on:
+  push:
+    branches: [ main ]
   schedule:
     # Run every day at 2 AM UTC
     - cron: '0 2 * * *'
